# docs/swagger.json
@@ -4,6 +4,164 @@
         "contact": {}
     },
     "paths": {
+        "/notes": {
+            "get": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "tags": [
+                    "note"
+                ],
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "name": "page_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "maximum": 10,
+                        "minimum": 5,
+                        "type": "integer",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.listNoteResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "tags": [
+                    "note"
+                ],
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.createNoteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.noteResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/notes/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "tags": [
+                    "note"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Note ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.noteResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "tags": [
+                    "note"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Web ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.putNoteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.noteResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "tags": [
+                    "note"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Notes ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": ""
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "tags": [
@@ -116,7 +274,7 @@
                     {
                         "minimum": 1,
                         "type": "integer",
-                        "name": "pageID",
+                        "name": "page_id",
                         "in": "query",
                         "required": true
                     },
@@ -124,7 +282,7 @@
                         "maximum": 10,
                         "minimum": 5,
                         "type": "integer",
-                        "name": "pageSize",
+                        "name": "page_size",
                         "in": "query",
                         "required": true
                     }
@@ -195,10 +353,63 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "tags": [
+                    "web"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Web ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": ""
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
+        "api.createNoteRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string",
+                    "maxLength": 10000
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 1
+                },
+                "web_ids": {
+                    "type": "array",
+                    "maxItems": 5,
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "api.createUserRequest": {
             "type": "object",
             "required": [
@@ -223,6 +434,17 @@
             "properties": {
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "api.listNoteResponse": {
+            "type": "object",
+            "properties": {
+                "notes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.noteResponse"
+                    }
                 }
             }
         },
@@ -284,6 +506,56 @@
                 }
             }
         },
+        "api.noteResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "webs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.webResponse"
+                    }
+                }
+            }
+        },
+        "api.putNoteRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "title": {
+                    "description": "ID      string   `uri:\"id\" binding:\"required,uuid\"`",
+                    "type": "string"
+                },
+                "web_ids": {
+                    "type": "array",
+                    "maxItems": 5,
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "api.renewAccessTokenRequest": {
             "type": "object",
             "required": [
@@ -331,8 +603,20 @@
         },
         "api.webResponse": {
             "type": "object",
+            "required": [
+                "created_at",
+                "html",
+                "id",
+                "thumbnail_url",
+                "title",
+                "url",
+                "user_id"
+            ],
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "html": {
                     "type": "string"
                 },
                 "id": {
